Pulsating pomodoro when running; fixed some timer jumpiness when starting and when passing 0.0

--- a/client/public/css/app.css
+++ b/client/public/css/app.css
@@ -13,6 +13,38 @@ body {
   width: 100%;  // Possibly needed if there's an interfering div between the row and col divs?
 }
 
+/*
+ * Animation configurations ( duration and fill mode )
+ * From: http://webdesignerhut.com/5-animations-using-css-keyframes/
+ */
+.animated {
+    -webkit-animation-duration: 1s;
+            animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+            animation-fill-mode: both;
+    -webkit-animation-iteration-count: infinite;
+            animation-iteration-count: infinite;
+}
+/*
+ * Pulsing animation
+ */
+@-webkit-keyframes pulse {
+    0% { -webkit-transform: scale(1); }
+   50% { -webkit-transform: scale(1.05); }
+  100% { -webkit-transform: scale(1); }
+}
+@keyframes pulse {
+    0% { transform: scale(1); }
+   50% { transform: scale(1.05); }
+  100% { transform: scale(1); }
+}
+
+.pulse {
+  -webkit-animation-name: pulse;
+          animation-name: pulse;
+}
+
+
 /* CSS tweaks for small displays */
 @media all and (max-width : 400px) {
   h1   { font-size: 30px; }
